version 0.3.0
 * Added a "preferred quality" setting

version 0.2.0
 * this release fixes the broken scraper
 * using rss-feeds again (high quality version now available)
 * Added support for many many many other media on tagesschau.de

version 0.1.4
 * added support for 'tagesthemen' (thanks to Max)

version 0.1.3:
 * fixed bug (html on tagesschau.de changed slightly)

version 0.1.2:
 * added encoding to python-file (thanks to Anssi)
 * using high-quality video sources now 

version 0.1.1:
 * added icon.png (thanks to freezy)
 * cosmetic changes (thanks to Arne)

version 0.1.0:
 * initial version
 * includes only most recent Tagesschau, Tagesschau in 100 Sekunden
   in low quality (fetched from podcast-RSS-feed of tagesschau.de)